welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: type mismatch;
 found   : Int(0)
 required: String
var x :String = 0
                ^