welcome.lessons.welcome.bdr.BDR.scala.code
var x :String = 0
while ( estSurMessage ) {
	
}
